--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:f12WdbhCJ0v1MCroww==,iv:SFvEeo5jm9N9v+Nmrx/BZMsW57lNUEqmwD1nAi301Gs=,tag:9Aa494TLD24Jkcqjlb2rXw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:pyC8UiqblSGzxA8W6hqp03b3iyFZmzcdO/LFMToaPs5e,iv:MQjWexLGgSchfxi8xnzxZoNCXSCUDjtM7qdPBh0wc50=,tag:4DR/EmZ1ZfYV8ikXqXWabg==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:hBXr0TK5AW6AqMUCT7k5nN1fIlUfyNslIUXIflpWzFCDCZND,iv:zSwR1S7Iv3WI9RHlr+kRMFvx0T6lgpiLUirj3Ht3tDA=,tag:ADiLzIgc/DECmMYvQhMKpQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:57zLIxWPqeyVyqh9aQ==,iv:OWBjZ47Q+s9u+c64x7UIArlXCVPKDAK/Fr2UEC1hWUE=,tag:e9kghpZ/EAD0r7EPWf/7uQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:dSmTs/hUtgSfrQeIGIC41gSBQN+ZAgTKGVRw+l+uteRi,iv:6a/wg12x25FxOnn+MMf71/3Kh/6LGv6X5V1zcr06IYw=,tag:Xv69g5JEhlVRqzpNM2WmqQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:w7oJkSMefiMpaIQrwgGQ05hrsvCGfsA+d20XjckaumeYPJY9,iv:WSJCsOKAttd38wcjb4KWqAOdBwnlYgV8NNRNF/iLWRw=,tag:lxkC8SS7vXuBksoSvBpRsA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1lcg2c8efnnnmmlq5ftp85v8enwc7adhrm4auqnjfckww76fj6vrs5redm3
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNUjZEN0hkNm5mbTRBN1NH
-            QXVJM1l5c1Rxa29QZHRORDNGTEYxa1k5YVY4ClVhR1F4NTdBWGdFSWlvbnlzWlEw
-            V2R2VUpJYkNkQWliNnl0TGFGeWhtVGMKLS0tIFQvQTJpbWVLd0dIY0ZWTHJkU3ho
-            d1E2MThwUDVpTzVtZHVOclZXN3pWOHMKndwWDW5dafTaA0KOZJDLQMlScwgQ6IGk
-            mNfa8dqMQmaRrsh1O/RvUoNiEA20p0mQR5tOP3cNoJZvyIUlA8mv8w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwTkdjQnNEeEx6dEZ1NXlE
+            SkhwUk55eUtXWUduU3VRSW1ESUxRYVRnYmdnCnQ4UWVOZ0FsWDVueDcyZHFtdXhZ
+            VklQb0tlUnNoT3grWnM3V2RzMWQvM0kKLS0tIDEwNGVENGpFRm5jbjkwVFoyNkV4
+            SGVEVXpPRWFPclcwVnVCRklVREh2SncKVBR4RWYaZJmzW/gV8QUnBfAJYRchhsUw
+            +SUQOIroWf2GNbuDL87j8t/hretDJjXp6+q0j7VsvTqK53Vkk0GCCw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-24T04:32:11Z"
-    mac: ENC[AES256_GCM,data:ziC2jnBAIdK19n0GIQfEqq1pvFdejrZNtLq3IWEeKeqKNmIXTks5OQmsgFgk5EAVnhE+PRNZITUPg7Cj4deRaVe4rdjsxGumkg0mLooj1u7+/Mj/3u1112THjQ6HQlxX/Tet+XngwczNf+KmMMUxMkT9cINKJhu9Mdj3JnAS7ew=,iv:IVKpKXzwuyHL5KtNspoTmlwztD9XDvcntsxxD57zS/g=,tag:D702JFS5wkdrmy6YjgLSBQ==,type:str]
+    lastmodified: "2024-10-24T08:53:06Z"
+    mac: ENC[AES256_GCM,data:leIFtpDuXLDIa/Es7NzLunLNQqUfX8RWtiJ5vTQKYkJPHtewzffUXVPjIx2L9qOAWuAhY/TGhgtOC9JkcRMjPUQmHHybX9tR1oOJz5OXetmhXbE39Y9I7tgJPoKxfJG8qPovHtcmS43q70Jj+0pKFT2/jMhNShGvUSHNi1mGbi0=,iv:l3XxncXrLBUrEH1pusosXO+8laeloAfI5ukrS0YaLpg=,tag:gYHozeNHwCrO0R8f58LipQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
