--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:57zLIxWPqeyVyqh9aQ==,iv:OWBjZ47Q+s9u+c64x7UIArlXCVPKDAK/Fr2UEC1hWUE=,tag:e9kghpZ/EAD0r7EPWf/7uQ==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:dSmTs/hUtgSfrQeIGIC41gSBQN+ZAgTKGVRw+l+uteRi,iv:6a/wg12x25FxOnn+MMf71/3Kh/6LGv6X5V1zcr06IYw=,tag:Xv69g5JEhlVRqzpNM2WmqQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:w7oJkSMefiMpaIQrwgGQ05hrsvCGfsA+d20XjckaumeYPJY9,iv:WSJCsOKAttd38wcjb4KWqAOdBwnlYgV8NNRNF/iLWRw=,tag:lxkC8SS7vXuBksoSvBpRsA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:jBHwjB9pFfuPSyGMOQ==,iv:0dYxD2qNPY3N9XzZ8qGRqWhmNYO4YycMmBSKYdLc6z0=,tag:xb2N+HEVXCAIcoBwBpn76w==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:+ZscpgDmvG75nDE8DsxvBnpXWRNsKLifTRFBMKnMwW6w,iv:Kbm8bzUZ7OVDLo+H+ix+PahJQewB2ni3cJhtkDsA2js=,tag:ogxvqkxgeQZZqiLWsXKGTQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:Z5eVe+4+6H59h3xC0KE/5XelrF78fZJ5Uf0sCKKus2yGcLD2,iv:GWL+dLyPd/Kv2/cHF15d3CX1Uo072QzWhcJ9nDSUhoQ=,tag:lTaQRNI5iOGpBAKujZw4bA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1lcg2c8efnnnmmlq5ftp85v8enwc7adhrm4auqnjfckww76fj6vrs5redm3
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwTkdjQnNEeEx6dEZ1NXlE
-            SkhwUk55eUtXWUduU3VRSW1ESUxRYVRnYmdnCnQ4UWVOZ0FsWDVueDcyZHFtdXhZ
-            VklQb0tlUnNoT3grWnM3V2RzMWQvM0kKLS0tIDEwNGVENGpFRm5jbjkwVFoyNkV4
-            SGVEVXpPRWFPclcwVnVCRklVREh2SncKVBR4RWYaZJmzW/gV8QUnBfAJYRchhsUw
-            +SUQOIroWf2GNbuDL87j8t/hretDJjXp6+q0j7VsvTqK53Vkk0GCCw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiNnczOTdEQUQ5TFN0dllQ
+            UHQvVkFBVkFRbVlIc3piT3pzVEluc1NDbmxVCmlUOHpjYXB6aWEzUkM5cmVlUDB4
+            YVU5ZWxvYlhmcWszZS9Mc2svYmxkVFUKLS0tIGRiYi9mM2NZaVkvSm1RYzVBZXJE
+            cE43eE5BdDhJMXZFK1FmUGNZdGVhVjAKTEsoS4cxTnHQ4ChgRqURV7H0+86KBUZV
+            1y0jVRYAw5Eq942DI2NDtIuCwi1DEuHPn0QEFMDOotxxvle786gqZg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-24T08:53:06Z"
-    mac: ENC[AES256_GCM,data:leIFtpDuXLDIa/Es7NzLunLNQqUfX8RWtiJ5vTQKYkJPHtewzffUXVPjIx2L9qOAWuAhY/TGhgtOC9JkcRMjPUQmHHybX9tR1oOJz5OXetmhXbE39Y9I7tgJPoKxfJG8qPovHtcmS43q70Jj+0pKFT2/jMhNShGvUSHNi1mGbi0=,iv:l3XxncXrLBUrEH1pusosXO+8laeloAfI5ukrS0YaLpg=,tag:gYHozeNHwCrO0R8f58LipQ==,type:str]
+    lastmodified: "2024-12-11T17:24:50Z"
+    mac: ENC[AES256_GCM,data:hZYSYkbtq1Xcj9GqDpBUQ2zIr1p/f/hXfACT/bFECK0Gv2SjDkwPflUDLhr2PnHvvt37qRIY1MUfAi2VtNyA5o4ci1/1PSP3mJZgdEE0Q0ACWOV0aZxtFRVSWPcN1ALBtpAqm4fsDX5qi/tvvOT/HmVmo24Q7zEwc7hbHUcyuO4=,iv:0TIC3l/UrBAQB4FFXYavN4Cx4SFMGUByJa3i0Ru2CmU=,tag:DSBd2+kx0JcQPCl+0tqE5A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
