--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:jBHwjB9pFfuPSyGMOQ==,iv:0dYxD2qNPY3N9XzZ8qGRqWhmNYO4YycMmBSKYdLc6z0=,tag:xb2N+HEVXCAIcoBwBpn76w==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:+ZscpgDmvG75nDE8DsxvBnpXWRNsKLifTRFBMKnMwW6w,iv:Kbm8bzUZ7OVDLo+H+ix+PahJQewB2ni3cJhtkDsA2js=,tag:ogxvqkxgeQZZqiLWsXKGTQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:Z5eVe+4+6H59h3xC0KE/5XelrF78fZJ5Uf0sCKKus2yGcLD2,iv:GWL+dLyPd/Kv2/cHF15d3CX1Uo072QzWhcJ9nDSUhoQ=,tag:lTaQRNI5iOGpBAKujZw4bA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:44oIdANZUfwAv5EJFw==,iv:Jb0RSQaHpGFqDEBUtzvSycp543rhbjukkI/xmns+0Vs=,tag:BMLx9fh4l8L/rn6Cqe9Y4A==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:iW1DqpZC98viSZaOTqxpPGvwFPYtKI21R5LZLxAzkz3P,iv:E/IBS4qz/aUcz6Fa0QlFf79DqDr9DDEPB+qDrwf3Xs0=,tag:KGAmSAt1cFLuh53wFaFKBw==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:1qRb3J4FQ8cndkKk2R1AShXSM8koHCfQxS28Yx9y5ollGdvt,iv:cWovtspuO10lsCNlIs8VSKgFaa28KkU5IvCeces8ZcM=,tag:KnoBHKYJjj5qNemjjJsBhQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1lcg2c8efnnnmmlq5ftp85v8enwc7adhrm4auqnjfckww76fj6vrs5redm3
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiNnczOTdEQUQ5TFN0dllQ
-            UHQvVkFBVkFRbVlIc3piT3pzVEluc1NDbmxVCmlUOHpjYXB6aWEzUkM5cmVlUDB4
-            YVU5ZWxvYlhmcWszZS9Mc2svYmxkVFUKLS0tIGRiYi9mM2NZaVkvSm1RYzVBZXJE
-            cE43eE5BdDhJMXZFK1FmUGNZdGVhVjAKTEsoS4cxTnHQ4ChgRqURV7H0+86KBUZV
-            1y0jVRYAw5Eq942DI2NDtIuCwi1DEuHPn0QEFMDOotxxvle786gqZg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOd3hDRDcwejlCamE5ckVW
+            UFZpa3NGQXhpWjJNYUY4bjVoTE14c2U4V0F3CnpBNERGaUkrT1NrdlR1WTBGcmVX
+            ZndHTXBEVWMyeURNM2hUcytQa2szZG8KLS0tIFRidERGYnUyTS9DU0lRUVNSQXNG
+            Y0VJY0pGSnExV3l4NUNDei8zV1M3UEEKSLs4FLo2Gt+LcL7otMGpqDbYPHdRw9Bd
+            /ou3QDvQQJ9RUVo4TiBVEcWXj9pJnmFOE+6EO853yi/9QRo7X9Do1A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-11T17:24:50Z"
-    mac: ENC[AES256_GCM,data:hZYSYkbtq1Xcj9GqDpBUQ2zIr1p/f/hXfACT/bFECK0Gv2SjDkwPflUDLhr2PnHvvt37qRIY1MUfAi2VtNyA5o4ci1/1PSP3mJZgdEE0Q0ACWOV0aZxtFRVSWPcN1ALBtpAqm4fsDX5qi/tvvOT/HmVmo24Q7zEwc7hbHUcyuO4=,iv:0TIC3l/UrBAQB4FFXYavN4Cx4SFMGUByJa3i0Ru2CmU=,tag:DSBd2+kx0JcQPCl+0tqE5A==,type:str]
+    lastmodified: "2024-12-14T18:20:11Z"
+    mac: ENC[AES256_GCM,data:lfGdSaKu5Nt68R4vRipF6hPrqk2xQXrnhroWl+urKWt28YytbVe0LCM7bVF6TN6L1FD//s4Z15+mO40CHOWX14aWH4YBmzgiLmvAnPcL4TA0GkXlDMf66EWboXE+FeDfShVhVJmclC4/6QyviuDREgjwuQ7MEJDKUxkN3QycTJQ=,iv:OL6y6F/UlbVN1JJErmdbDss2KTFbm1aTiEeyOEg8OrM=,tag:KmxrzohwxpaYVzrNZOGjHQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
