--- a/kubernetes/apps/qrapp/deployment.yaml
+++ b/kubernetes/apps/qrapp/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: qrapp
-  namespace: network
+  namespace: qrapp
   annotations:
 spec:
   selector:
