--- a/kubernetes/apps/homepage/serviceaccount.yml
+++ b/kubernetes/apps/homepage/serviceaccount.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: homepage
-  namespace: network
+  namespace: myapps
   labels:
     app: homepage
 secrets:
