--- a/kubernetes/apps/minio/app/values.yaml
+++ b/kubernetes/apps/minio/app/values.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app minio
+  name: minio
   namespace: storage
 spec:
   interval: 30m
@@ -14,7 +14,7 @@ spec:
       version: 3.7.1
       sourceRef:
         kind: HelmRepository
-        name: bjw-s-charts
+        name: bjw-s
         namespace: flux-system
 
   maxHistory: 3
@@ -61,23 +61,23 @@ spec:
 
             envFrom:
               - secretRef:
-                  name: *app
+                  name: app
 
-            probes:
-              liveness: &probes
-                enabled: true
-                custom: true
-                spec:
-                  httpGet:
-                    path: /minio/health/live
-                    port: 9000
-                  initialDelaySeconds: 30
-                  periodSeconds: 30
-                  timeoutSeconds: 10
-                  failureThreshold: 6
-              readiness: *probes
-              startup:
-                enabled: false
+            # probes:
+            #   liveness: probes
+            #     enabled: true
+            #     custom: true
+            #     spec:
+            #       httpGet:
+            #         path: /minio/health/live
+            #         port: 9000
+            #       initialDelaySeconds: 30
+            #       periodSeconds: 30
+            #       timeoutSeconds: 10
+            #       failureThreshold: 6
+            #   readiness: probes
+            #   startup:
+            #     enabled: false
 
             securityContext:
               runAsUser: 568
