--- a/kubernetes/apps/minio/app/values.yaml
+++ b/kubernetes/apps/minio/app/values.yaml
@@ -14,7 +14,7 @@ spec:
       version: 3.7.1
       sourceRef:
         kind: HelmRepository
-        name: bjw-s
+        name: bjw-s-charts
         namespace: flux-system
 
   maxHistory: 3
@@ -63,21 +63,21 @@ spec:
               - secretRef:
                   name: app
 
-            # probes:
-            #   liveness: probes
-            #     enabled: true
-            #     custom: true
-            #     spec:
-            #       httpGet:
-            #         path: /minio/health/live
-            #         port: 9000
-            #       initialDelaySeconds: 30
-            #       periodSeconds: 30
-            #       timeoutSeconds: 10
-            #       failureThreshold: 6
-            #   readiness: probes
-            #   startup:
-            #     enabled: false
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /minio/health/live
+                    port: 9000
+                  initialDelaySeconds: 30
+                  periodSeconds: 30
+                  timeoutSeconds: 10
+                  failureThreshold: 6
+              readiness: *probes
+              startup:
+                enabled: false
 
             securityContext:
               runAsUser: 568
