chore: reset talhelper encrypted secret :lock:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,20 +3,20 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:rcCIso/XBG1IAcMpnQ==,iv:BuSVm7ZBoLchThv0iuSUkvC+FQTOi51b3Xtpgb/z+lo=,tag:ZFDOSaNsX97kS678nv5lXg==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:o6mBHhA8C+8YnZ43HQ==,iv:QNywoIksfPTghrgn+bPulDbU5VX2RL0DgiWXNxgdsvc=,tag:024Dc22vvrzYqeCacUYe0Q==,type:str]
 sops:
   age:
     - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwQnVQVDdtYS82c0xNd2Zs
-        MUsxMW14UTZSSHpUUUd5VnZQa3p4Qk5VVTBJCnd6eHFENVQ4eTBFZTZ1OG9CT0Fv
-        NzBqbHVUdWhlMW5rSk95NUtDMkJpTWsKLS0tIEJqcjh3K2hYMU04N290MGVRQmVU
-        QzVXUUlMaHZCK0hNK3hIRUZCYTZsTlkKNqoqQ4RThuWtv3oRqtwG1xAT5CeZ9Nys
-        hdZ45Yce2DYKEWuMRNghymZpQjc6p5ET3XTjE57GWtZsJIpkUgjfFw==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZZE9iY1dOSU12YnRWTitH
+        d2dTR2tKejZxUVoxbm03K081R3R2ZEhhWjFRClZlRTN3YVZ0TnhGem1MaGlXZUpF
+        RlJaSGNpVE5KWHNBYlZXR05DZ0ZBVzgKLS0tIDR4N3Zhb2tJc2xrcXJ6ZDMwYldH
+        dFVMTy9ZVk1MSkJaS1psaytPbVhtdmcKtvQMw83JdlP0bGzqO3Oh51OZu5f0BVvI
+        vu/spA2UgswC5NxUfLdZ6xYV3lPc7aZ9K65tbuHSP0IR/T1n8v97iw==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-05-22T05:02:40Z"
-  mac: ENC[AES256_GCM,data:yPTkQ6dJPj5TcW3ITxAo+FNoYn1nfTHnyBLZ+aFMIFNLFYs9+mk2VL2FFwJN/PUQ6vJI2VNtFXb5MRQrh16F+YBZBdmgNlnVOT5wTkqqXmyUFkiv43GLyvyW03qjpL/T00+e8KULayJ0gKV6ZWv2TjdqJl8F0nsTRkFWm7yxgbY=,iv:xPUldzY1nXRnwMPYtrHETkqmpwYyaNHK3joXUEDHaYY=,tag:9w+QmBg0DhyvhOiPuSI1OA==,type:str]
+  lastmodified: "2025-05-22T06:54:23Z"
+  mac: ENC[AES256_GCM,data:bz79bYr3U/jCpT0qLhJj/6BBPRVao+aJDqjjjwQo2KCl6Qqvt0CmOvAhN7TCF4AVch6r3IKYY+NDjUwGtZ++dCOKI/ufQ3W4fU4mxvS7JFuek9g4VXCpVVpfYl2/BLPPXv2inSVrSiorzlpUMoeTCGq2MNyASTTE2zecONKZIpM=,iv:5M3qt8AcIT1wii7Y4XqLzBKzvL0x+77XXzQmHfAN1SQ=,tag:x7VT74bQPLhzeT/IMTaxqQ==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.10.2
