chore: reset talhelper encrypted secret :lock:

--- a/kubernetes/apps/cert-manager/cert-manager/app/secret.sops.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/secret.sops.yaml
@@ -1,23 +1,8 @@
+---
 # yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1-standalone-strict/secret-v1.json
 apiVersion: v1
 kind: Secret
 metadata:
   name: cert-manager-secret
 stringData:
-  api-token: ENC[AES256_GCM,data:s6Io5bKVoDKFglFPQT6ClGtaJsEp8DO6tgcZXqBEyQ1QfZ1HcIYfig==,iv:c4aznvrzePg+j0cxa9vod1t/sz1nsiaI/H7/G3eRADw=,tag:GSlrg9NYxXQl9FGQwluNwA==,type:str]
-sops:
-  age:
-    - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqYW81UVgwWXpPVTdEWm9G
-        bHNHSnBKTSsrUW44aEV1TzJRTGpIaHRJUno0CkI3TVkxK2c3Z2JJL3BhUysrNEZB
-        dEdQNWI3c00wUXdyY1FuaE4zQnZKR00KLS0tIFVyZXhtYzhuNFJKcG9OK095akZT
-        OEdSNE5SS2prbFJGb1lCc0MrS3R6Mm8KAFhy+B6wfqwqqFWRPFQLKnYWCEJtf+Nf
-        X2SdcR+y2OwByx4E7bUF/rrhYSIKqZBxOQDPrL4x3WbJoo81tPwDlA==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-05-22T06:54:23Z"
-  mac: ENC[AES256_GCM,data:zT5JtoolCT5H+KRRW+e+eBiVltpbNJlmh6uerVtJpt/WVboW3yS8S1vCoyXTS4HZ2F4wP1cjWA36S6+MprNe7OaPlPRVnIPSgigchWxv/+fH1XBThAPPX8almYWM/S9wl/kj+HpdH4p4mjyBH14r/Gf5x5/W0Y5jN2PFTUjTRQ8=,iv:pQOmnrcneC5ALkfJGei7j1B1gfAI79fQKjLoQmvZI7w=,tag:cjBnqNvlWeJ1fA+L38+2NQ==,type:str]
-  encrypted_regex: ^(data|stringData)$
-  mac_only_encrypted: true
-  version: 3.10.2
+  api-token: "n_z050gXM3W7R7IIdSZdnwsN-hv4tlc6QCBBIP8A"
