--- a/kubernetes/apps/flux-system/flux-instance/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/secret.sops.yaml
@@ -1,23 +1,8 @@
+---
 # yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1-standalone-strict/secret-v1.json
 apiVersion: v1
 kind: Secret
 metadata:
   name: github-webhook-token-secret
 stringData:
-  token: ENC[AES256_GCM,data:36ohGPUf0r2+H+nUBDaU6fuRcHKZuKOGQX6aY8wrikU=,iv:0CSsKy1hLgYB/CURentJ1CVjQpeOFsAvzgs/CoGYXy8=,tag:plQZi8QycN4OMZL8zltMkw==,type:str]
-sops:
-  age:
-    - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsbEhHNnBrbEE1TFFkWnlI
-        QmlQTmlsOHo1SnExU252czBuUWpZVmFwbmg4CmFrQ1QvNkhoeTdmWmJhZzUvTUpJ
-        djRvellpc1hod1ZWK1dzMklzaVp6YXcKLS0tIExMVSsva01iMFNMWWd4QTI2N1hX
-        Qk5xUExCOWMwY1d1bmdNcXM0QjNkbHcK3vTqnRs/nRXQteXofRxJJXxoyprwnHZm
-        CBb5OXIqU8qa943FCqFuhNaA7Y9jHxtYJXkERV/TvIxeyiH0wbfcUQ==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-05-22T06:54:23Z"
-  mac: ENC[AES256_GCM,data:FOxDzxOUU6k1zODt4JibeRghUuH7kuWwKIfXWyo/GZIMsxzSWM80Pe/lDYqysVh4eRkI7yICIXEuXM9rAG8Fb7J6tipwwt6G8+IYELP+jHSz+Fm8mdgSAyWR9GT71N7vLxGRCBVg//V2B4wPlUOCPe59KI+ZfpGs1GJvcmsWmHg=,iv:5dPFv7bkNFx1ZOZwsXgNwlsxKG0vLAsFzV8Xfx8mkeQ=,tag:G3Bd+jIFUNVfTLiMYbQXFw==,type:str]
-  encrypted_regex: ^(data|stringData)$
-  mac_only_encrypted: true
-  version: 3.10.2
+  token: "6f89349f510d02da93f8d7a689f0f577"
