--- a/kubernetes/apps/network/external/cloudflared/secret.sops.yaml
+++ b/kubernetes/apps/network/external/cloudflared/secret.sops.yaml
@@ -1,23 +1,9 @@
+---
 # yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1-standalone-strict/secret-v1.json
 apiVersion: v1
 kind: Secret
 metadata:
   name: cloudflared-secret
 stringData:
-  TUNNEL_TOKEN: ENC[AES256_GCM,data:yIvaov73sGRLEljQXfVjgr4SvVBqI0mdLJzAgdJTBEjNRwnPTLfTFEh5Qw5wT6ZGFkHVwaDDzvXqA9Wml6PcxlRLNbAI5LuMEo/BbeulZBVtQ2FY2EgVUbOv0roeVOfH+OhBWZ7TiavHExeF3ep+BGj+TyOnd4L4dD5FgQv7k+O5fB0Yfq1W93kX0WeTsMuHo1MWy4BeTroas8kMIKC+W0z2ctvRDWreMFBdKli73ulOPbhfqg==,iv:y4IFtkn7cW3cq0a81P0kXXkHqS6Ljs8BLwo+KK/xLOY=,tag:7LtxfMaMqanjMaybqwar8A==,type:str]
-sops:
-  age:
-    - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDM09KeXM5MWpNMWVNeTBz
-        SG5qMVZNS2xkMkhzM0NJTEZmbGFPWEVaNkhBCmdCUUgwMitGQi91czJubVIySWRO
-        TUlSd1FoTFNsL013dDlXUm1jamFyT3cKLS0tIGRlQ29acmlSUkYwVnJMVmt6QUhE
-        SzFUZlUwbWJxYS9MTnBlczJpRXRRZkUK0e7z319Ordp4LGkq03GqVCPpOdaPEDE5
-        z7K0KogwT3hs7Ga4zzbnYkj//PANtYn5ORvJH6dnKh7Mt4LuAFiy6Q==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-05-22T06:54:23Z"
-  mac: ENC[AES256_GCM,data:xiZOi0NTmq8t3ACgUxrpaRjSo85uKzB+EjHRYG6OyZBi8tr3dDuKeHJDrRjEIIatRKfPL997P+Rw7jk6b42OZpeZnt/ZVzG2Hx4oCDKr5+ekNMAo1kDJTdLLn0HMRdQpGbXYZ/ixq9w//ribEEbVk5bpELMAQeLQZjNNtFHWWzo=,iv:TMLrQSCFxA+3nTEVkpn6sCkTigEhkpyd/s+Fmh3QP5g=,tag:stOaW6qgki2YlP7BLhz+rA==,type:str]
-  encrypted_regex: ^(data|stringData)$
-  mac_only_encrypted: true
-  version: 3.10.2
+  TUNNEL_TOKEN: |
+    eyJhIjoiMDllNzJlNThkYmM0ZDUxYWY4MTIwMGViOTU3NjU5NDQiLCJ0IjoiOTk3NDI1ZDMtMjZhZC00MGQ3LThlMWMtYzk4YzMyZWQwNTM0IiwicyI6InFmRCtXUW56MXllWU9Nd3AxY3NTK1piNHJjamxXK3RwN0w5bGV0V1dEbFE9In0=
