--- a/kubernetes/apps/network/external/external-dns/secret.sops.yaml
+++ b/kubernetes/apps/network/external/external-dns/secret.sops.yaml
@@ -1,23 +1,8 @@
+---
 # yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1-standalone-strict/secret-v1.json
 apiVersion: v1
 kind: Secret
 metadata:
   name: external-dns-secret
 stringData:
-  api-token: ENC[AES256_GCM,data:CJU7B3wnikYTpLeIXBGxwD3WCbriTT4q9IX2lSWgOvJpYK9M8gCLVQ==,iv:/B6MSr9sIj1FtYxSFOgm5E+AHUZ9RDgjDzqArDbqfMI=,tag:a2ca1npLePqcZZkGqZ0AsQ==,type:str]
-sops:
-  age:
-    - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxTk1FQ0w2cjJ2VmtiMTdM
-        Z1dEbEZxaG5hbnFHTDI3QURWSWVQaVpEV1RzCjhOZkNNaFVlT1M0MlVtQzRPTGY0
-        Ynk3b0cvYTVuSG1PVWc0VS9wem5OL0kKLS0tIFhJSDV6RmQ5U3pkNENrSXRUcW5L
-        elRnTkV5RmxVNmc3V3NkUE05NU96MUEKLwvvmYDUFm7R7cGHmfxyoh8XiY13OLRs
-        ct9XpozjvyBV1sp6FrpMOCWW02kApuqNVlxjh6MT80Dt97GZGegLIg==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-05-22T06:54:23Z"
-  mac: ENC[AES256_GCM,data:+lqR25e7ygYT31YGCJj1a/06PucKgwpt1DHo3NU/9RfbxAzE6EcXhLJ3EEpWsTCN1OUG8OXIBqpQQosXOed5RThG2KiRMAL+1elx7oeZ5IcWwAFN1nAwDnOZeSqxe4L08kJq5aA7QYbcufm33q3xJeI9Ru1fiTyrjxothsCpitY=,iv:T+YZBYzOJJYeELCzoIUPDiddIevdiw+OcdFNeZxbiD4=,tag:h3ad0xDjzIY7rUTft52Hgw==,type:str]
-  encrypted_regex: ^(data|stringData)$
-  mac_only_encrypted: true
-  version: 3.10.2
+  api-token: "n_z050gXM3W7R7IIdSZdnwsN-hv4tlc6QCBBIP8A"
