--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -1,22 +1,7 @@
+---
 apiVersion: v1
 kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:o6mBHhA8C+8YnZ43HQ==,iv:QNywoIksfPTghrgn+bPulDbU5VX2RL0DgiWXNxgdsvc=,tag:024Dc22vvrzYqeCacUYe0Q==,type:str]
-sops:
-  age:
-    - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZZE9iY1dOSU12YnRWTitH
-        d2dTR2tKejZxUVoxbm03K081R3R2ZEhhWjFRClZlRTN3YVZ0TnhGem1MaGlXZUpF
-        RlJaSGNpVE5KWHNBYlZXR05DZ0ZBVzgKLS0tIDR4N3Zhb2tJc2xrcXJ6ZDMwYldH
-        dFVMTy9ZVk1MSkJaS1psaytPbVhtdmcKtvQMw83JdlP0bGzqO3Oh51OZu5f0BVvI
-        vu/spA2UgswC5NxUfLdZ6xYV3lPc7aZ9K65tbuHSP0IR/T1n8v97iw==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-05-22T06:54:23Z"
-  mac: ENC[AES256_GCM,data:bz79bYr3U/jCpT0qLhJj/6BBPRVao+aJDqjjjwQo2KCl6Qqvt0CmOvAhN7TCF4AVch6r3IKYY+NDjUwGtZ++dCOKI/ufQ3W4fU4mxvS7JFuek9g4VXCpVVpfYl2/BLPPXv2inSVrSiorzlpUMoeTCGq2MNyASTTE2zecONKZIpM=,iv:5M3qt8AcIT1wii7Y4XqLzBKzvL0x+77XXzQmHfAN1SQ=,tag:x7VT74bQPLhzeT/IMTaxqQ==,type:str]
-  encrypted_regex: ^(data|stringData)$
-  mac_only_encrypted: true
-  version: 3.10.2
+  SECRET_DOMAIN: "samboxlab.top"
