chore: modified talhelper config 🔧

--- a/clusters.yaml
+++ b/clusters.yaml
@@ -29,7 +29,7 @@ cluster_api_tls_sans: ["homekube.samboxlab.top"]
 
 # -- The pod CIDR for the cluster, this must NOT overlap with any existing networks and should be a /16 (64K IPs).
 #    (OPTIONAL) / (DEFAULT: "10.42.0.0/16")
-cluster_pod_cidr: "10.69.0.0/16"
+# cluster_pod_cidr: "10.69.0.0/16"
 
 # -- The service CIDR for the cluster, this must NOT overlap with any existing networks and should be a /16 (64K IPs).
 #    (OPTIONAL) / (DEFAULT: "10.43.0.0/16")
