--- a/kubernetes/apps/cert-manager/cert-manager/app/secret.sops.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/secret.sops.yaml
@@ -1,8 +1,23 @@
----
 # yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1-standalone-strict/secret-v1.json
 apiVersion: v1
 kind: Secret
 metadata:
   name: cert-manager-secret
 stringData:
-  api-token: "n_z050gXM3W7R7IIdSZdnwsN-hv4tlc6QCBBIP8A"
+  api-token: ENC[AES256_GCM,data:jS3NVqCq1SnJ2ZsT9OtaSHZoErSE5wL7RC262+XIN4upZNbgOpmk3A==,iv:4X6u9wqVzpnavPEU7uq8MoGSqpczdIxpbbYBO7TmBkE=,tag:9xMRNk725bQyu2pWtFhfFg==,type:str]
+sops:
+  age:
+    - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEWTJpeHZTd21uMEJES2FR
+        Y0FpUEpZZk96b0Y0b1Zoc0ZzeU5za3Z0QVRFCnQyQThpU3gzS1VsSFpNS3g3OVp1
+        dUtQbWtpaVljV2I2OTJYeFBkZUdwZHcKLS0tIHN3dEtJTTRZWno1cDl0SzVWRzFo
+        bDJiTU81bkZFdDJuNE42Ti9lcGlkbHcK4FExkxky9kfcahseO//+UVmIT93TVcrj
+        FyT/Az7zaDRMJanqcAdeJL1my8mkBLVUOSuyfGt2UE9KdKW0K4NBoA==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2025-05-22T19:05:58Z"
+  mac: ENC[AES256_GCM,data:qC8tfCuuMeNQpe4V0rIcRga+VYi+ReX9GrEm7qQnWeLeAUtp8igy6KtPSaeD/0GNWv5mVObdsQzo/YJvo26ADU8ZWwdZvJwhH14ybet0lmcRg85RuUyEdsCka+J282Ctopdltd2njNROMXiJVphnYgQP9XhxaWGPwAB9t0p8BZY=,iv:eXcCY+j/4/dnD+ipYPTmZbXM3LLmDmkIFHsjiItckjg=,tag:zP0iZMwFQ3XkAJMfj7V4kA==,type:str]
+  encrypted_regex: ^(data|stringData)$
+  mac_only_encrypted: true
+  version: 3.10.2
