--- a/kubernetes/apps/flux-system/flux-instance/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/secret.sops.yaml
@@ -1,8 +1,23 @@
----
 # yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1-standalone-strict/secret-v1.json
 apiVersion: v1
 kind: Secret
 metadata:
   name: github-webhook-token-secret
 stringData:
-  token: "6f89349f510d02da93f8d7a689f0f577"
+  token: ENC[AES256_GCM,data:h4dArkWhGyoMJO+Z34UUvlCTFf1/53lnAD/yMi+4kn8=,iv:wzWO53ZCdbRvxHBY0SSFgG9p1/+ul0fh5byuvURT8eo=,tag:mwOTlxF5o0NsfgjKEt/1Gg==,type:str]
+sops:
+  age:
+    - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBVlpDR2kyd0FmdlFZMDhh
+        WVJ3Vjdsd1hTVzM4d1Rya29WNUJDRHhWYkRrClVZMFdGYkQyUWRZbVl5aUs3NCtB
+        djEzdnpFMHpqWHB4d0FxdS9Zd1FiS2sKLS0tIFMxK0RESjNNYnhwM2cvWUErZjJl
+        dE5BY2h5eEp4UnFPdDBpWUluOERkemMKcqUebQBtLZw7VtH1CYrqsRSnsNfI4oK3
+        4nUQA0hFSX1XmVrQ+BWYrs4cmgarPDSXOxTyZJe5CXT8OkslDYrC3Q==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2025-05-22T19:05:58Z"
+  mac: ENC[AES256_GCM,data:f+AeimA5Mxyi2Fn8SCZXTnqduEiir7V8CpYh2QkZdEyfnHfJC6b5qYgVcLoREAFWSMa7fto0pZaqIZ8eXtJVr8Skl9i81gYkEXXG69E3/pdIjFVFjxW/hJ7WRg9tGvhvrqm8C4NaHPszI8oqdpO2mM3W14DwTqJGULolh5g95cw=,iv:htgIRYW/f4fLha1ljabqBWATDkGXnQp9yNMM+AaZiB0=,tag:P1nKdND3maMKfR9pDmSIlg==,type:str]
+  encrypted_regex: ^(data|stringData)$
+  mac_only_encrypted: true
+  version: 3.10.2
