--- a/kubernetes/apps/network/external/cloudflared/secret.sops.yaml
+++ b/kubernetes/apps/network/external/cloudflared/secret.sops.yaml
@@ -1,9 +1,23 @@
----
 # yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1-standalone-strict/secret-v1.json
 apiVersion: v1
 kind: Secret
 metadata:
   name: cloudflared-secret
 stringData:
-  TUNNEL_TOKEN: |
-    eyJhIjoiMDllNzJlNThkYmM0ZDUxYWY4MTIwMGViOTU3NjU5NDQiLCJ0IjoiOTk3NDI1ZDMtMjZhZC00MGQ3LThlMWMtYzk4YzMyZWQwNTM0IiwicyI6InFmRCtXUW56MXllWU9Nd3AxY3NTK1piNHJjamxXK3RwN0w5bGV0V1dEbFE9In0=
+  TUNNEL_TOKEN: ENC[AES256_GCM,data:HLHRxWfIE6NTvCgosRSGWIy01mW0eYDge/Nte35FP1vJohlAjo/Pl9d40Xwa+HAp5r6mJrLlHQlWYMzCb6DSxcALhDDjpziEZvd8JbOoZGdSDhJLO55ZZ/nGHwpOLOMQhgdV3AEIPsIZTMb7Cns2OjoFtxUyGGusmJdiAxxqEo2rp5TGf4oZ25mvRpyzyiphJWiXFESiwzn/NNExqgGq91YirvuhkDBSxKkKgqtMBKLFiAS4Gg==,iv:zYXMkMPGKNAHg3dgd4ftYfdVWY53yzAvv3fLlug6tA4=,tag:EWqknTwxxx864hNPyXYVog==,type:str]
+sops:
+  age:
+    - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSUnJWb2wwNEczZmVUWXdV
+        eFhUYnVMZFEyQk1nY2U0UWtUeUZQbzNPeHlZCjNUWDRuRE40cmc4TTZ6dWhuams2
+        MmRzYXBudlQvOTBKS1VwTGFQa3BDM2sKLS0tIDVwWS9sUE1uTHl6c2JKMGJYM1lz
+        WFl2dWU3Tk5ZY29Fb2F3a2dzc3BIOTAKYRgp3Ikk1nAzSroy6UVoC+7kw7ioaREj
+        RuHzQcLj9K20w/KIK0oXVpCnwQuQsA17ZKDE32FEsUDSd4krr5ZJkA==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2025-05-22T19:05:58Z"
+  mac: ENC[AES256_GCM,data:RTuAmy2+CuWj2i33GdiNgY273teDaE/iFlpD8h0sHD8v9GAZri1y4amFlTcJaQ16/bNyCtu2RbuMnkqJclnRaCfQ06Ie43n/wgBIIiZN3e+H/OEEUZv3DK2his74iXCcO8BCV83xFikcqHAKx2kqQQpokIyfOdpaUB5KjJRE+PU=,iv:JluQIj0J4txUf7dHZgYf4JYjiKsXpv0BUuu+bJH82gI=,tag:bUICldFM1c91Mj0v4T6quA==,type:str]
+  encrypted_regex: ^(data|stringData)$
+  mac_only_encrypted: true
+  version: 3.10.2
