--- a/kubernetes/apps/network/external/external-dns/secret.sops.yaml
+++ b/kubernetes/apps/network/external/external-dns/secret.sops.yaml
@@ -1,8 +1,23 @@
----
 # yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1-standalone-strict/secret-v1.json
 apiVersion: v1
 kind: Secret
 metadata:
   name: external-dns-secret
 stringData:
-  api-token: "n_z050gXM3W7R7IIdSZdnwsN-hv4tlc6QCBBIP8A"
+  api-token: ENC[AES256_GCM,data:QXKhajOH8mF/cc2FccS/izw6W1ruhrZNTgZ940N1ElDHe4vf1LpMtw==,iv:AnMcAZFL4HHPQxpC785upjRwDnWD3WQGzlDNvUZS4DQ=,tag:k+23R/1xsPA0L/YpOOfZ8g==,type:str]
+sops:
+  age:
+    - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDdGVDOWxpcjdTMVR4NjhU
+        U2cyVW5MUExic001T0VyT3JWMW1STEJJeEdFCm50RUtWUUZNajBrNVFtUnRZdVhh
+        TXRDakxCakNsY053STh5OTF0d1dtVEEKLS0tIDJvTnhLM1hRSmQ3RjlURjVkZmFr
+        ekJtR2xKeldIaDF1aHJvcFZsY3E0WncKaoRQkMRGjwPHSUqJoniM/b6RpXKFdneG
+        ceP1bSHEKoPA82fb3wKj1xJm2iUlt5hR9D7VXKqqhvVtxj6sOtq8ww==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2025-05-22T19:05:58Z"
+  mac: ENC[AES256_GCM,data:KzyCPPUyg5SQkpGQbQ2TIvJRHk1PzZMWS7GObaHkMc+0AYiFRjIkMacdmclEwkh92Sf5zNFVV924pSWLjLPCLIdpj0ZO2JNuiccxt1W2yEskj4NnuS0bgfUfo/oEqpD4XnhkX61B1iKCyXomWqTIO8As42ysOXqyztn2QlWQxPs=,iv:QPZib0ChWmV8mSYLuV6O8RXTU65zdssmovH8Hy8qpy0=,tag:nHDDnv5Ea6AhdUeripD5mw==,type:str]
+  encrypted_regex: ^(data|stringData)$
+  mac_only_encrypted: true
+  version: 3.10.2
