--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -16,11 +16,11 @@ cgroup:
 endpointRoutes:
   enabled: true
 envoy:
-  enabled: false
+  enabled: true
 dashboards:
   enabled: true
 hubble:
-  enabled: false
+  enabled: true
 ipam:
   mode: kubernetes
 ipv4NativeRoutingCIDR: "10.69.0.0/16"
