--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -1,7 +1,22 @@
----
 apiVersion: v1
 kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: "samboxlab.top"
+  SECRET_DOMAIN: ENC[AES256_GCM,data:J5KuCLf41BDL06CC4g==,iv:5Ei/SZpClYA6ZSMoPd67QJSnVqpHG7/eanf0sBrU0Zs=,tag:fOPE4XnwIl5SbgIC7uLsVg==,type:str]
+sops:
+  age:
+    - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByb3czT2RBQjJlamYwNG56
+        c0RwV2p4OGViUlN6UGpMb1QvdnBVTHArMFFFCk9pWkpqWUQwY2kyam1iaFgzamc5
+        Y3ZsRU55dGV3ZDRNbzdla0sxRnpOYlEKLS0tIHgzY3pCbWJpdFhSZWxrZXJzM0ha
+        WGxRVlVzRUdqY1FPcjllYW5zMEZ4M2cK3Ccyf0fyLjPjhGl/zmslxxIUJWVjV1az
+        0mDDc/Pq9WGl+1knPWx7ZVfjjvxrc1cq/6BUgIT0DEHGl1ugwNGbVw==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2025-05-22T19:05:58Z"
+  mac: ENC[AES256_GCM,data:dk1Fbgo0m9+GEjR7gec21iZCtpdaTJltF6Brfv7lu+oXaC9lnhWoanXzvn8llrUgY3zLEJhV32eEmXgUr0Savcm39r/nIcNAmis/MZiWRdCuQjVoavN0ZCAaa8oNxbRy23HJjyhEI41OsgsGtOF1EhVt/+9Vbvu17SOF5FTAl7I=,iv:Sw3vFEyvhrNFGCA5tzx8e7jbD+X5c/sg4VoJ+aLQZII=,tag:SkMbM1uqB3b3HJ2ZiJ/fMw==,type:str]
+  encrypted_regex: ^(data|stringData)$
+  mac_only_encrypted: true
+  version: 3.10.2
