--- a/kubernetes/components/common/sops-age.sops.yaml
+++ b/kubernetes/components/common/sops-age.sops.yaml
@@ -1,7 +1,22 @@
----
 apiVersion: v1
 kind: Secret
 metadata:
   name: sops-age
 stringData:
-  age.agekey: "AGE-SECRET-KEY-1QNA8JFWL0KFJQE332RGHJZWMJEKNMD2858FFZ73HDZAL6NQZLT9SRMP7H2"
+  age.agekey: ENC[AES256_GCM,data:E7qjyoaELYBDDZl1wjass47DivVyV8sdKBAKfLtKM9GHPadRX4WyjNGr6qysfL58KyP+7grpsaTkzgmOqnHCjC7aaHkuzGqjOyo=,iv:EHv5gw0rLHMl2RnFNLP9HvaIxCqgzBNNPdrCJjQ31+4=,tag:UcGAQ+Ma6fbgXpjMnk1a5Q==,type:str]
+sops:
+  age:
+    - recipient: age1r2etnyxjn5wm2ycwf8wv5ntmvtj7dl2ppqae2y0laf6tptyenu8sustqgj
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyWm9mdEsveUJIaXQ5dFhT
+        b05JYTRzWVZBTW52M1FsOVBvYWNwbEFyeURFCjUySHZxdXdaY1lhSDZ6cHpSL2I0
+        dFJib3VQUFl5bjhNYzZ1Qkl6ZWZaQWsKLS0tIHJWd1RMbmxsYzlndzRONVJNWm0r
+        aWNMWkFPRUgwaXloSS9DcTNSSE90Z0kKuAo8F9rXl7afpBLf0nPbgHC+FGVU5tEA
+        idRTugwHWU0JffUv80n9Vqqj76uuBn49cyOzk0uUgpqYG3km3BzoCw==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2025-05-22T19:05:58Z"
+  mac: ENC[AES256_GCM,data:H3mbJHqrA3jUnQfWWGl84UFo8XFTWfzVktl1SVqNEoj0T2DAu2C+58ZiM9dXDTR2YAvwg0iTmyBDSO5f4h9XHMHf1uLOKp+C1GBlmROY6asYHiHD2oIy36rgV41ukiAS0cji6sFwlWQVm/3FeLGJ1isLd31AQrcEUhinyQV5qNI=,iv:qxT3E5JSMLX1N80VWFOMDDNtHk1hCGFOYC+8Tn64l4Q=,tag:EL7uv7/0E9FTWEB7OWnFIw==,type:str]
+  encrypted_regex: ^(data|stringData)$
+  mac_only_encrypted: true
+  version: 3.10.2
