fix(flux): update config

--- a/kubernetes/apps/flux-system/flux-instance/app/helm/values.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/helm/values.yaml
@@ -13,5 +13,5 @@ instance:
   sync:
     kind: GitRepository
     url: "https://github.com/sojay/homekube.git"
-    ref: "refs/heads/update-branch"
+    ref: "refs/heads/main"
     path: kubernetes/flux/cluster
