feat(storage): deploy enhanced OpenEBS and Longhorn storage solution

--- a/kubernetes/apps/kustomization.yaml
+++ b/kubernetes/apps/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ./default
   - ./flux-system
   - ./kube-system
+  - ./longhorn-system
   - ./network
   - ./observability
   - ./slack-alerts
