--- a/kubernetes/apps/observability/prometheus-operator-crds/ks.yaml
+++ b/kubernetes/apps/observability/prometheus-operator-crds/ks.yaml
@@ -13,7 +13,8 @@ spec:
   prune: false # never should be deleted
   sourceRef:
     kind: GitRepository
-    name: homekube
+    name: flux-system
+    namespace: flux-system
   wait: false
   interval: 30m
   timeout: 5m
