--- a/kubernetes/flux/config/cluster.yaml
+++ b/kubernetes/flux/config/cluster.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: homekube
+  name: flux-system
   namespace: flux-system
 spec:
   interval: 30m
@@ -27,7 +27,7 @@ spec:
   wait: false
   sourceRef:
     kind: GitRepository
-    name: homekube
+    name: flux-system
   decryption:
     provider: sops
     secretRef:
