fix: add Flux labels to Longhorn ingress and disable built-in ingress

--- a/kubernetes/apps/longhorn-system/longhorn/app/helmrelease.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/helmrelease.yaml
@@ -79,10 +79,4 @@ spec:
 
     # Ingress for UI
     ingress:
-      enabled: true
-      ingressClassName: internal
-      host: longhorn.${SECRET_DOMAIN}
-      tls: true
-      tlsSecret: longhorn-tls
-      annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-production
+      enabled: false
