--- a/kubernetes/apps/longhorn-system/longhorn/app/ingress.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/ingress.yaml
@@ -14,7 +14,7 @@ metadata:
     nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Longhorn'
     cert-manager.io/cluster-issuer: letsencrypt-production
 spec:
-  ingressClassName: internal
+  ingressClassName: external
   tls:
     - hosts:
         - longhorn.samboxlab.top
