feat: update longhorn basic auth with secure password

--- a/kubernetes/apps/longhorn-system/longhorn/app/ingress.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/ingress.yaml
@@ -38,4 +38,4 @@ metadata:
   namespace: longhorn-system
 type: Opaque
 data:
-  auth: YWRtaW46JGFwcjEkSDY1dnlzWjgkaE5WQ2pPa1lhVmJUM0lZZWtFTVJWLw==  # admin:longhorn
+  auth: YWRtaW46JGFwcjEkYmJYWGpsSTgkOHV0VFlDMDFzbHdIek9EVHdsbEdHLw==  # admin:zNVABzhvS5LIOXbtNr/UAw==
