--- a/kubernetes/apps/longhorn-system/longhorn/app/kustomization.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
   - ./helmrelease.yaml
   - ./ingress.yaml
+patchesStrategicMerge:
+  - ./clusterrolebinding-patch.yaml
