fix: exclude longhorn from external DNS and use HTTP backend for cloudflare tunnel

--- a/kubernetes/apps/network/external/cloudflared/configs/config.yaml
+++ b/kubernetes/apps/network/external/cloudflared/configs/config.yaml
@@ -1,10 +1,10 @@
 ---
 originRequest:
-  originServerName: "external.${SECRET_DOMAIN}"
+  noTLSVerify: true
 
 ingress:
   - hostname: "${SECRET_DOMAIN}"
-    service: &svc https://external-ingress-nginx-controller.network.svc.cluster.local:443
+    service: &svc http://external-ingress-nginx-controller.network.svc.cluster.local:80
   - hostname: "*.${SECRET_DOMAIN}"
     service: *svc
   - service: http_status:404
