--- a/kubernetes/apps/longhorn-system/longhorn/app/ingress.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/ingress.yaml
@@ -9,6 +9,7 @@ metadata:
     kustomize.toolkit.fluxcd.io/name: longhorn
     kustomize.toolkit.fluxcd.io/namespace: flux-system
   annotations:
+    external-dns.alpha.kubernetes.io/exclude: "true"
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: basic-auth
     nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Longhorn'
