--- a/kubernetes/apps/longhorn-system/longhorn/app/ingress.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/ingress.yaml
@@ -14,6 +14,17 @@ metadata:
     nginx.ingress.kubernetes.io/auth-secret: basic-auth
     nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Longhorn'
     cert-manager.io/cluster-issuer: letsencrypt-production
+    # Browser compatibility headers
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "X-Frame-Options: SAMEORIGIN";
+      more_set_headers "X-Content-Type-Options: nosniff";
+      more_set_headers "X-XSS-Protection: 1; mode=block";
+      more_set_headers "Referrer-Policy: strict-origin-when-cross-origin";
+      more_set_headers "Access-Control-Allow-Origin: https://longhorn.samboxlab.top";
+      more_set_headers "Access-Control-Allow-Credentials: true";
+      more_set_headers "Access-Control-Allow-Methods: GET, POST, PUT, DELETE, OPTIONS";
+      more_set_headers "Access-Control-Allow-Headers: Authorization, Content-Type, Accept";
+    nginx.ingress.kubernetes.io/proxy-cookie-path: "/ /; HTTPOnly; Secure; SameSite=None"
 spec:
   ingressClassName: external
   tls:
