fix: change grafana storage to openebs-hostpath - nfs-csi not available

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
         enabled: false
       persistence:
         enabled: true
-        storageClassName: nfs-csi
+        storageClassName: openebs-hostpath
         size: 2Gi
       plugins:
         - grafana-clock-panel
