--- a/kubernetes/apps/kube-system/metrics-server/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/metrics-server/app/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: metrics-server
-  namespace: kube-system # Required for Renovate lookups
+  namespace: flux-system # Required for Renovate lookups
 spec:
   interval: 1h
   url: https://kubernetes-sigs.github.io/metrics-server
@@ -15,7 +15,7 @@ kind: HelmRelease
 metadata:
   name: metrics-server
 spec:
-  interval: 1h
+  interval: 30m
   chart:
     spec:
       chart: metrics-server
@@ -23,7 +23,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: metrics-server
-        namespace: kube-system
+        namespace: flux-system
   install:
     remediation:
       retries: -1
