fix: resolve longhorn ClusterRoleBinding kustomization failure - replaced strategic merge patch with namespaceOverride in HelmRelease - ensures ServiceAccount is created in correct longhorn-system namespace - removes obsolete clusterrolebinding-patch.yaml

--- a/kubernetes/apps/longhorn-system/longhorn/app/helmrelease.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/app/helmrelease.yaml
@@ -21,6 +21,9 @@ spec:
     remediation:
       retries: 3
   values:
+    # Ensure all resources are created in the correct namespace
+    namespaceOverride: "longhorn-system"
+
     # Persistence settings
     persistence:
       defaultClass: false                    # Don't make it default
